<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fullscreen_content_controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:background="#0099cc"
    android:orientation="vertical"
    tools:ignore="UselessParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>


        <Button android:id="@+id/game_button" style="@style/ButtonHome"
                android:layout_width="0dp" android:layout_height="match_parent"
                android:layout_weight="3" android:text="@string/button_game"
                android:background="@drawable/rectangle_arrondi_gris"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/submitResponse_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            style="@style/ButtonHome"
            android:text="@string/button_addResponse"
            android:background="@drawable/rectangle_arrondi_gris"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/rules_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            style="@style/ButtonHome"
            android:text="@string/button_rules"
            android:background="@drawable/rectangle_arrondi_gris"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
</LinearLayout>
